2001-06-20  Derek Price  <dprice@collab.net>

	* logmsg.c (do_editor): Abort in the case that the file has only
	comment lines.
	(Original patch from Mark Valentine <mark@thuvia.demon.co.uk>.)

	* logmsg.c (do_editor): Fix rare memory leak.
	* sanity.sh (editor): Add tests for aborted log messages.

2001-06-20  Larry Jones  <larry.jones@sdrc.com>

	* server.c (switch_to_user): Only set $CVS_USER if
	AUTH_SERVER_SUPPORT is defined.
	(Reported by Nalin Dahyabhai <nalin@blade.devel.redhat.com>.)

2001-06-13  Derek Price  <dprice@collab.net>

        * client.c: Fix incorrect fixed-size buffer usage in
        connect_to_gserver().
	(Minor changes to a patch from Alexey Mahotkin  <alexm@hsys.msk.ru>.)

2001-06-11  Derek Price  <dprice@collab.net>

	* main.c (main): Always print $CVSROOT when parse_cvsroot fails.
	* root.c (parse_cvsroot): Tidy error messages and provide more
	consistent behavior.
	* sanity.sh (crerepos): Adapt to new error messages.
	(Suggested by  Alexey Mahotkin <alexm@hsys.msk.ru>.)

2001-06-08  Derek Price  <dprice@collab.net>

	* sanity.sh (tagf-28): Use $CVSROOT_DIRNAME.

2001-06-07  Larry Jones  <larry.jones@sdrc.com>

	* rcs.c (RCS_unlock): Reverse kj's change of 1999-10-18: a bare -u
	should never break locks, you have to specify a specific revision
	to do that.  Also add an informative message for a bare -u when
	the user doesn't hold any locks.
	* commit.c (unlockrcs): Make RCS_unlock quiet, like RCS_lock.
	* sanity.sh (rmadd-24): Update to match.

	* sanity.sh (crerepos-6a): Set CVS_RSH for ${testcvs}, not for
	dotest_fail.  Allow for "broken pipe" rather than "end of file".

2001-06-07  Derek Price  <dprice@collab.net>

	* sanity.sh (tagf): Use $CVSROOT_DIRNAME rather than
	/tmp/cvs-sanity/cvsroot.

2001-06-06  Derek Price  <dprice@collab.net>

	(Reformatting, bug fixes, tests, and comments to a
	patch from Stephen Cameron <steve.cameron@compaq.com>.)

	* tag.c: (rtag_fileproc, rtag_delete, tag_fileproc)